--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -9,7 +9,8 @@ server {
 	ssl_certificate_key /etc/nginx/ssl/inception.key;
 
 	root /var/www/wordpress;
-	server_name localhost; #localhost da cambiare
+	listen 80; #questa riga serve per testare nginx in locale sul portatile, forse sarà da rimuovere dopo
+	server_name localhost; #localhost da cambiare in login.42.fr
 	index index.php index.html index.htm;
 
 	location / {
@@ -19,6 +20,7 @@ server {
 	location ~ \.php$ {
 		include snippets/fastcgi-php.conf;
 		fastcgi_pass wordpress:9000;
+		#riga 21 da rimuovere per testare senza wordpress
 	}
 }
 }
