--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -15,3 +15,4 @@ RUN apt-get update && apt-get install -y \
 RUN wget https://it.wordpress.org/wordpress-6.8.1-it_IT.tar.gz -P /var/www
 RUN cd /var/www && tar -xzf wordpress-6.8.1-it_IT.tar.gz && rm wordpress-6.8.1-it_IT.tar.gz
 RUN chown -R root:root /var/www/wordpress
+COPY conf/www.conf /etc/php/7.3/fpm/pool.d/www.conf
