--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -15,4 +15,15 @@ RUN apt-get update && apt-get install -y \
 RUN wget https://it.wordpress.org/wordpress-6.8.1-it_IT.tar.gz -P /var/www
 RUN cd /var/www && tar -xzf wordpress-6.8.1-it_IT.tar.gz && rm wordpress-6.8.1-it_IT.tar.gz
 RUN chown -R root:root /var/www/wordpress
+
+#Questo serve a installare CLI per configurare automaticamente wordpress
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
+    chmod +x wp-cli.phar && \
+    mv wp-cli.phar /usr/local/bin/wp
+
+
 COPY conf/www.conf /etc/php/7.3/fpm/pool.d/www.conf
+
+EXPOSE 9000
+
+CMD ["php-fpm7.3","-F"]
