problemi docker-compose risolti

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   nginx:
     build:
@@ -15,7 +13,7 @@ services:
       - wordpress
     networks:
       - inception
-    restart: on-failure
+    restart: always
   
   wordpress:
     build:
@@ -24,7 +22,7 @@ services:
     container_name : wordpress
     volumes:
       - wordpress_data:/var/www/html
-    enviroment:
+    environment:
       WORDPRESS_DB_HOST: mariadb
       WORDPRESS_DB_USER: ${MYSQL_USER}
       WORDPRESS_DB_PASSWORD: ${MYSQL_PASSWORD}
@@ -41,29 +39,29 @@ services:
     depends_on:
       - mariadb
     networks:
-      -inception
-    restart: on-failure
+      - inception
+    restart: always
 
-    mariadb:
-      build:
-        context: ./requirements/mariadb
-        dockerfile: Dockerfile
-      container_name: mariadb
-      volumes:
-        - mariadb_data:/var/lib/mysql
-      enviroment:
-        MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-        MYSQL_DATABASE: ${MYSQL_DATABASE}
-        MYSQLUSER: ${MYSQL_USER}
-        MYSQL_PASSWORD: $[MYSQL_PASSWORD]
-      networks:
-        - inception
-      restart: on-failure
+  mariadb:
+    build:
+      context: ./requirements/mariadb
+      dockerfile: Dockerfile
+    container_name: mariadb
+    volumes:
+      - mariadb_data:/var/lib/mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQLUSER: ${MYSQL_USER}
+      MYSQL_PASSWORD: $[MYSQL_PASSWORD]
+    networks:
+      - inception
+    restart: always
 
-      volumes:
-        mariadb_data:
-        wordpress_data:
+volumes:
+  mariadb_data:
+  wordpress_data:
 
-      networks:
-        inception:
-          driver: bridge
+networks:
+  inception:
+    driver: bridge
