A LOT of bug fixes

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "443:443"
     volumes:
       - wordpress_data:/var/www/html
-      - .-requirements/nginx/conf:/etc/nginx/conf.d
+      - ./requirements/nginx/conf:/etc/nginx/conf.d
     depends_on:
       - wordpress
     networks:
@@ -36,6 +36,7 @@ services:
       WP_USER: ${WP_USER}
       WP_USER_PASSWORD: ${WP_USER_PASSWORD}
       WP_USER_EMAIL: ${WP_USER_EMAIL-}
+      MYSQL_HOST: ${MYSQL_HOST}
     depends_on:
       - mariadb
     networks:
@@ -52,8 +53,9 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: ${MYSQL_DATABASE}
-      MYSQLUSER: ${MYSQL_USER}
+      MYSQL_USER: ${MYSQL_USER}
       MYSQL_PASSWORD: $[MYSQL_PASSWORD]
+      MYSQL_HOST: $[MYSQL_HOST]
     networks:
       - inception
     restart: always
