--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -8,7 +8,7 @@ RUN apt install curl -y
 #riga 6 e 7 per installare vim e curl e avere un terminale più comdo nel container, forse da cancellare
 RUN mkdir -p /etc/nginx/ssl
 RUN apt install openssl -y
-RUN openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt -keyout /etc/nginx/ssl/inception.key -subj "/C=IT/ST=IDF/L=Italy/O=42/OU=42/CN=login.42.fr/UID=login"
+RUN openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt -keyout /etc/nginx/ssl/inception.key -subj "/C=IT/ST=IDF/L=Italy/O=42/OU=42/CN=ecaruso.42.fr/UID=ecaruso"
 #(riga 10 crea un certificato senza password,devo capire se serve questa parte)
 RUN mkdir -p /var/run/nginx
 RUN chmod 755 /var/www/html
