--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -8,8 +8,7 @@ server {
 	ssl_certificate /etc/nginx/ssl/inception.crt;
 	ssl_certificate_key /etc/nginx/ssl/inception.key;
 
-	root /var/www/wordpress;
-	listen 80; #questa riga serve per testare nginx in locale sul portatile, forse sarà da rimuovere dopo
+	root /var/www/html;
 	server_name localhost; #localhost da cambiare in login.42.fr
 	index index.php index.html index.htm;
 
@@ -20,6 +19,7 @@ server {
 	location ~ \.php$ {
 		include snippets/fastcgi-php.conf;
 		fastcgi_pass wordpress:9000;
+		include fastcgi_params;
 		#riga 21 da rimuovere per testare senza wordpress
 	}
 }
