--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -9,6 +9,10 @@ COPY tools/init_db.sh /usr/local/bin/
 
 RUN chmod +x /usr/local/bin/init_db.sh
 
+RUN mkdir -p /var/run/mysqld && \
+    chown -R mysql:mysql /var/run/mysqld && \
+    chmod 777 /var/run/mysqld
+
 EXPOSE 3306
 
 ENTRYPOINT ["/usr/local/bin/init_db.sh"]
