--- a/srcs/requirements/mariadb/conf/50-server.cnf
+++ b/srcs/requirements/mariadb/conf/50-server.cnf
@@ -1,6 +1,6 @@
 [mysqld]
-datadir=/var/lib/mysql
-socket = /run/mysqld/mysqld.sock
-bind_address=*
-port = 3306
+bind-address = 0.0.0.0
 user = mysql
+datadir = /var/lib/mysql
+socket = /run/mysqld/mysqld.sock
+port = 3306
