--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -9,7 +9,8 @@ server {
 	ssl_certificate_key /etc/nginx/ssl/inception.key;
 
 	root /var/www/html;
-	server_name localhost; #localhost da cambiare in login.42.fr
+	#localhost da cambiare in login.42.fr(forse)
+	server_name localhost;
 	index index.php index.html index.htm;
 
 	location / {
@@ -20,7 +21,6 @@ server {
 		include snippets/fastcgi-php.conf;
 		fastcgi_pass wordpress:9000;
 		include fastcgi_params;
-		#riga 21 da rimuovere per testare senza wordpress
 	}
 }
 }
